<?xml version="1.0"?>
<package format="2">
  <name>ros_jog</name>
  <version>0.0.1</version>
  <description>A tool for jogging manipulators in ROS</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>taskspace_control_msgs</depend>
  <exec_depend>pose_controllers</exec_depend>
  <exec_depend>taskspace_controllers</exec_depend>
</package>
