<?xml version="1.0"?>
<package format="2">
  <name>ros_jog</name>
  <version>0.1.0</version>
  <description>A simple ROS rqt plugin for publishing xyz values</description>
  <author>Alex Arbogast</author>
  <author>Rowan Ramamurthy</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <maintainer email="rowrama99@gmail.com">Rowan Ramamurthy</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>taskspace_control_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>libeigen3-dev</depend>
  <depend>actionlib</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
